tests/it/snapshots/it__test_on__error__=0.3.snap
---
source: tests/it/test_on.rs
info:
  program: hyprshade
  args:
    - "on"
    - vibrance
    - "--var"
    - "=0.3"
  env:
    HOME: /tmp/.tmpwmVFrT/hyprshade-test-dir/home/
    XDG_CONFIG_HOME: /tmp/.tmpwmVFrT/hyprshade-test-dir/home/.config
    __HYPRSHADE_MOCK_TIME: ""
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '=0.3' for '--var <KEY=VALUE>'

  tip: empty KEY

For more information, try '--help'.
