tests/it/snapshots/it__test_on__error__=strength=.snap
---
source: tests/it/test_on.rs
info:
  program: hyprshade
  args:
    - "on"
    - vibrance
    - "--var"
    - "=strength="
  env:
    HOME: /tmp/.tmp66Xwut/hyprshade-test-dir/home/
    XDG_CONFIG_HOME: /tmp/.tmp66Xwut/hyprshade-test-dir/home/.config
    __HYPRSHADE_MOCK_TIME: ""
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '=strength=' for '--var <KEY=VALUE>'

  tip: too many equals signs

For more information, try '--help'.
