tests/it/snapshots/it__test_on__error__���.snap
---
source: tests/it/test_on.rs
info:
  program: hyprshade
  args:
    - "on"
    - vibrance
    - "--var"
    - ���
  env:
    HOME: /tmp/.tmp9cJvUb/hyprshade-test-dir/home/
    XDG_CONFIG_HOME: /tmp/.tmp9cJvUb/hyprshade-test-dir/home/.config
    __HYPRSHADE_MOCK_TIME: ""
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid UTF-8 was detected in one or more arguments

For more information, try '--help'.
